# dotsy

./: .gitignore  CONTRIBUTING.md  README.md  app.py  credits.md  hello.py  pyproject.toml  python.py
.zed/: settings.json
backend/: main.go
cmd/backend/: main.go
src/dotsy/: main.py
src/dotsy/core/: config_manager.py  script_logic.py
src/dotsy/gui/: setup_ui.py
